# labs-6-5840

./: .gitignore  Cargo.toml  justfile  readme.md  todo.md
src/: common.rs  main.rs  map_reduce.rs  map_reduce_apps.rs  map_reduce_parallel.rs  map_reduce_seq.rs  thread_pool.rs
src/mr_parallel/: coordinator.rs  mod.rs  worker_pool.rs
