[package]
name = "labs-6-5840"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
clap = { version = "4.5.13", features = ["derive"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
