[package]
name = "labs-6-5840"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
async-trait = "0.1.81"
clap = { version = "4.5.13", features = ["derive"] }
futures = "0.3.30"
futures-lite = "2.3.0"
regex = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
